# genable

./: .gitignore  README.md  pyproject.toml
application/: llm.py
cli/: cli.py
core/: core.py
solution/basicRAG/: README.md  basicRAG.py  basicRAGLangchain.py  basicRAGLlamaIndex.py  cli.py  schema.yml  test.py
solution/basicRag/: basicRag.py
solution/coderag/: README.md  codeRag.py  code_rag.py
solution/deploy/: base.py
ui/: ui.py
